--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <!-- image en bas du carré droit (optionnel) -->
-        <div class="side-image" style="background-image:url('https://raw.github.com/allanbavajee/coeur-ouvert/blob/main/image/zen.image.png');"></div>
+        <div class="side-image" style="background-image:url('https://raw.github.com/allanbavajee/coeur-ouvert/blob/main/image/zen.png');"></div>
       </aside>
 
     </div>
